# s3dump

./: README.md  flake.nix  pyproject.toml  requirements.txt  s3d.py
s3dump/: cli.py
tests/: test_cli.py
